test/src/e2e_vm_tests/test_programs/should_pass/language/match_expressions_constants/src/lib.sw
library;

pub const LIB_X = 1021;
pub const LIB_Y = 1034;
