test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_configurables/src/lib.sw
library;

pub const LIB_X = 5;

pub const LIB_Y = 5;

pub const LIB_Z = 5;
